crates/ty_python_semantic/resources/mdtest/snapshots/basedpython_context_…_-_basedpython___context…_-_a_positional_`contex…_(7854bce3d4fdb653).snap
---
source: crates/mdtest/src/lib.rs
expression: snapshot
---

---
mdtest name: basedpython_context_parameters.md - basedpython: context parameters - a positional `context` parameter of an overload set is not filled
mdtest path: crates/ty_python_semantic/resources/mdtest/basedpython_context_parameters.md
---

# Source files

## mdtest_snippet.by

```
 1 | from typing import overload
 2 | 
 3 | @overload
 4 | def f(a: int, context b: str) -> int: ...
 5 | @overload
 6 | def f(a: str, context b: str) -> str: ...
 7 | def f(a: int | str, context b: str) -> int | str:
 8 |     return a
 9 | 
10 | context t: str = "hello"
11 | 
12 | f(1)  # error: [no-matching-overload]
```

# Diagnostics

```
error[no-matching-overload]: No overload of function `f` matches arguments
  --> src/mdtest_snippet.by:12:1
   |
12 | f(1)  # error: [no-matching-overload]
   | ^^^^
info: `b` is a `context` parameter, and an overload set is given one implicitly only where it is keyword-only in every overload
info: Declare `b` after a `*` in every overload, or pass it explicitly
info: First overload defined here
 --> src/mdtest_snippet.by:3:1
  |
3 | / @overload
4 | | def f(a: int, context b: str) -> int: ...
  | |_________________________________________^ First overload defined here
info: Possible overloads for function `f`:
info:   (a: int, b: str) -> int
info:   (a: str, b: str) -> str
info: Overload implementation defined here
 --> src/mdtest_snippet.by:7:5
  |
7 | def f(a: int | str, context b: str) -> int | str:
  |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

```
