crates/ty_python_semantic/resources/mdtest/snapshots/basedpython_context_…_-_basedpython___context…_-_an_overload_that_lea…_(39d2635c95b04ae2).snap
---
source: crates/mdtest/src/lib.rs
expression: snapshot
---

---
mdtest name: basedpython_context_parameters.md - basedpython: context parameters - an overload that leaves the `context` parameter out
mdtest path: crates/ty_python_semantic/resources/mdtest/basedpython_context_parameters.md
---

# Source files

## mdtest_snippet.by

```
 1 | from typing import overload
 2 | 
 3 | @overload
 4 | def g(a: int, *, context b: str) -> int: ...
 5 | @overload
 6 | def g(a: int, x: int) -> str: ...
 7 | def g(a: int, x: int = 0, *, context b: str = "") -> int | str:
 8 |     return a
 9 | 
10 | context t: str = "hello"
11 | 
12 | g(1)  # error: [no-matching-overload]
```

# Diagnostics

```
error[no-matching-overload]: No overload of function `g` matches arguments
  --> src/mdtest_snippet.by:12:1
   |
12 | g(1)  # error: [no-matching-overload]
   | ^^^^
info: `b` is a `context` parameter, and an overload set is given one implicitly only where every overload would be given the same argument
info: overload 1 would take `t`; overload 2 does not declare `b`
info: Pass `b` explicitly
info: First overload defined here
 --> src/mdtest_snippet.by:3:1
  |
3 | / @overload
4 | | def g(a: int, *, context b: str) -> int: ...
  | |____________________________________________^ First overload defined here
info: Possible overloads for function `g`:
info:   (a: int, *, b: str) -> int
info:   (a: int, x: int) -> str
info: Overload implementation defined here
 --> src/mdtest_snippet.by:7:5
  |
7 | def g(a: int, x: int = 0, *, context b: str = "") -> int | str:
  |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

```
